--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=ESP_SR_M5Unified
 version=1.0.0
-author=Custom
-maintainer=Custom
-sentence=ESP-SR library wrapper for M5Unified
-paragraph=ESP-SR library wrapper that works with M5Unified microphone
+author=74th
+maintainer=74th
+sentence=ESP-SR wrapper for M5Unified microphone input.
+paragraph=Use ESP-SR wake word and command recognition with audio captured from M5Unified (M5.Mic.record).
 category=Signal Input/Output
-url=
+url=https://github.com/74th/ESP-SR-For-M5Unified
 architectures=esp32
 depends=M5Unified
