Update platform version in platformio.ini and enhance display feedback in main.cpp

--- a/examples/EnglishCommand_platformio/platformio.ini
+++ b/examples/EnglishCommand_platformio/platformio.ini
@@ -1,5 +1,5 @@
 [env:m5stack-cores3]
-platform = https://github.com/pioarduino/platform-espressif32.git#55.03.30-2
+platform = https://github.com/pioarduino/platform-espressif32.git#55.03.36
 board = m5stack-cores3
 framework = arduino
 monitor_speed = 115200
