--- a/examples/HiStackChanWakeUpWord_platformio/platformio.ini
+++ b/examples/HiStackChanWakeUpWord_platformio/platformio.ini
@@ -15,6 +15,64 @@ lib_deps =
 
 build_flags =
     -DBOARD_HAS_PSRAM
+    -DARDUINO_USB_MODE
+    -DARDUINO_USB_CDC_ON_BOOT
+
+monitor_rts = 0
+monitor_dtr = 0
+
+[env:m5stack-atom3sr-with-echobase]
+platform = https://github.com/pioarduino/platform-espressif32.git#55.03.36
+board = m5stack-atoms3
+framework = arduino
+monitor_speed = 115200
+upload_speed = 1500000
+
+board_build.arduino.memory_type = qio_opi
+board_build.partitions = ../../partitions_esp_sr_8.csv
+extra_scripts = post:../../scripts/flash_srmodels.py
+
+lib_ldf_mode = deep
+lib_deps =
+    m5stack/M5Unified@^0.2.10
+    ../../
+
+build_flags =
+    -DARDUINO_M5STACK_ATOMS3
+    -DARDUINO_M5STACK_ATOMS3R
+    -DARDUINO_USB_MODE
+    -DARDUINO_USB_CDC_ON_BOOT
+    -DBOARD_HAS_PSRAM
+
+monitor_rts = 0
+monitor_dtr = 0
+
+[env:m5stack-atom-echos3r]
+platform = https://github.com/pioarduino/platform-espressif32.git#55.03.36
+board = m5stack-atoms3
+framework = arduino
+monitor_speed = 115200
+upload_speed = 1500000
+
+board_build.arduino.memory_type = qio_opi
+board_build.partitions = ../../partitions_esp_sr_8.csv
+extra_scripts = post:../../scripts/flash_srmodels.py
+
+lib_ldf_mode = deep
+lib_deps =
+    m5stack/M5Unified@^0.2.10
+    ../../
+
+build_flags =
+    -DARDUINO_M5STACK_ATOMS3
+    -DARDUINO_M5STACK_ATOMS3R
+    -DARDUINO_ATOM_ECHOS3R
+    -DARDUINO_USB_MODE
+    -DARDUINO_USB_CDC_ON_BOOT
+    -DBOARD_HAS_PSRAM
+
+monitor_rts = 0
+monitor_dtr = 0
 
 ; If you use the public repository instead of relative path:
 ; lib_deps =
