setup関数にECHO BASEのサポートを追加し、条件付きコンパイルを使用してATOM ECHO S3Rの設定を強化。表示処理を改善し、リスニング状態の表示を更新。

--- a/examples/HiStackChanWakeUpWord_platformio/platformio.ini
+++ b/examples/HiStackChanWakeUpWord_platformio/platformio.ini
@@ -41,6 +41,7 @@ build_flags =
     -DARDUINO_M5STACK_ATOMS3
     -DARDUINO_M5STACK_ATOMS3R
     -DARDUINO_USB_MODE
+    -DWITH_ECHO_BASE
     -DARDUINO_USB_CDC_ON_BOOT
     -DBOARD_HAS_PSRAM
 
